# robotics_integration_exercises

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/urdf_launch/share/ament_index/resource_index/parent_prefix_path/: urdf_launch
install/urdf_launch/share/urdf_launch/: package.sh
install/urdf_test/share/ament_index/resource_index/parent_prefix_path/: urdf_test
install/urdf_test/share/urdf_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/urdf_test/share/urdf_test/environment/: ament_prefix_path.sh  path.sh
install/urdf_test/share/urdf_test/launch/: display.launch.py
install/urdf_test/share/urdf_test/urdf/: test_puzzlebot.urdf
install/xacro/share/xacro/: package.bash  package.zsh
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/urdf_test/: CMakeLists.txt  package.xml  setup.py
src/urdf_test/config/: rob_pub.rviz
src/urdf_test/launch/: circle.launch.py  display.launch.py
src/urdf_test/src/: state_publisher.cpp
src/urdf_test/urdf/: test_puzzlebot.urdf
